--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
