--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,14 +16,22 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.18.1",
+    "@types/multer": "^1.4.12"
   }
 }
